--- a/index.html
+++ b/index.html
@@ -16,34 +16,29 @@
                             <a href="#"><img src="./image/IMS-Mini-Logo 1.png" alt="Main Logo"></a>
                         </div>
 
-                        <!-- Бургер меню -->
-                    <!--     <div class="items__burger-menu">
+                        
+                        <div class="items__burger-menu">
                             <span></span>
-                        </div> -->
+                        </div>
 
                         <nav class="items__menu">
                             <ul class="items__list">
                                 <a href="#!" class="items__link">Home</a>
                             </ul>
                             <ul class="items__list">
-                                <a href="#!" class="items__link">About</a>
+                                <a href="#about" class="items__link">About</a>
                             </ul>
                             <ul class="items__list">
-                                <a href="#!" class="items__link">Strategy</a>
+                                <a href="#Strategy" class="items__link">Strategy</a>
                             </ul>
                             <ul class="items__list">
-                                <a href="#!" class="items__link">Investments</a>
+                                <a href="#Investments" class="items__link">Investments</a>
                             </ul>
                             <ul class="items__list">
-                                <a href="#!" class="items__link">Contact</a>
+                                <a href="#Contact" class="items__link">Contact</a>
                             </ul>
                         </nav>
                     </div>
-                    <!-- Бергер меню и крестик
-                        <div class="header__mob-menu">
-                        <span class="header__plashka"></span>
-                    </div> 
-                -->
                 </div>
             </header>
             <main class="main">
@@ -63,7 +58,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="main__history history-main">
+                <div class="main__history history-main" id="about">
                     <div class="wrapper">
                         <div class="history-main__body">
                             <div class="history-main__image">
@@ -232,7 +227,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="strategy">
+                <div class="strategy" id="Strategy">
                     <div class="wrapper">
                         <div class="strategy__row">
                             <div class="strategy__image">
@@ -258,7 +253,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="investments">
+                <div class="investments" id="Investments">
                     <div class="wrapper">
                         <div class="investments__row">
                             <div class="investments__image">
@@ -271,7 +266,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="contact">
+                <div class="contact" id="Contact">
                     <div class="wrapper">
                         <div class="contact__row">
                             <div class="contact__items">
@@ -320,6 +315,8 @@
                 </div>
             </footer>
         </div>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="./js/script.js"></script>
     </body>
 </html>
 
